<resources>
    <string name="app_name">TipCalculator</string>
    <string name="cost_of_service">Cost of service?</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="great_20">Great(20%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="okey_10">Okey(10%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount %s</string>
</resources>