<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/iv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost_of_service"
            app:srcCompat="@drawable/ic_service" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/iv_cost"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cost_of_service"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/cost_of_service"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/iv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_percentage"
            app:srcCompat="@drawable/tip" />

        <TextView
            android:id="@+id/tv_percentage"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toEndOf="@+id/iv_tip"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service" />

        <RadioGroup
            android:id="@+id/rg_percents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_good"
            app:layout_constraintStart_toStartOf="@+id/tv_percentage"
            app:layout_constraintTop_toBottomOf="@id/tv_percentage">

            <RadioButton
                android:id="@+id/rb_great"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/great_20" />

            <RadioButton
                android:id="@+id/rb_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_15" />

            <RadioButton
                android:id="@+id/rb_okey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/okey_10" />

        </RadioGroup>

        <ImageView
            android:id="@+id/iv_roundup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/sw_roundup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sw_roundup"
            app:srcCompat="@drawable/ic_roundup" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_roundup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:checked="true"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_roundup"
            app:layout_constraintTop_toBottomOf="@+id/rg_percents" />

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/sw_roundup"
            app:layout_constraintTop_toBottomOf="@+id/sw_roundup" />

        <TextView
            android:id="@+id/tv_tip"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tip_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_calculate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>